[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twitter-cookie"
version = "0.1.0"
description = "Twitter project"
authors = ["KurniawanZATY"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
# If you have any scripts, you can define them here

[tool.poetry.dev-dependencies]
# Add any development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
# Include additional metadata or scripts for the build process

[tool.poetry.files]
include = ["twitter_cookie/*", "pyproject.toml"]
